# paidy-restaurant-api

./: Cargo.toml  README.md  docker-compose.yaml  writeup.md
src/: main.rs  service.rs
src/storage/: memory.rs  mod.rs  model.rs  pg.rs  testing.rs
