[package]
name = "paidy-restaurant-api"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.73"
chrono = "0.4.31"
derive_more = "0.99.17"
rand = "0.8.5"
thiserror = "1.0.49"
# rt + rt-multi-thread is for starting tokio runtimes in main in storage test suite
# sync is for tokio::sync::Mutex in memory storage
tokio = { version = "1.32.0", features = ["rt", "rt-multi-thread", "sync"] }
tracing = "0.1.37"
